Fix .svg-s not showing

--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,15 @@ footer {
     height: 80vh;
 }
 
-div.fish {
+.fish {
     width: 40px;
     height: 40px;
-    background-color:coral;
-    position: fixed;
+    /* background-color:coral; */
+    position: static;
+}
+
+.fish svg {
+    width: 80%;
+    margin: 0 auto;
+    color: coral;
 }
